<resources>

    <string name="app_name">Amazing HD Wallpaper</string>
    <string name="toast_saved">Wallpaper saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpapaer updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>

    <string name="settings">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="write_mail">Write mail to the development team</string>
    <string name="recommend">Recommend</string>
    <string name="share_app">Share this app to your friends/family</string>
    <string name="storage_location">Storage Location</string>
    <string name="storage_location_path">/storage/emulated/0/Pictures/Amazing HD Wallpaper/</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_subtxt">Rate us with 5-stars if you like this app</string>
    <string name="app_version">1.0.0</string>
    <string name="version">Version</string>
    <string name="ok">OK</string>
    <string name="designs_by_pexel_com">Designs by Pexel.com</string>
    <string name="no_internet_connection">No Internet connection</string>

</resources>
