<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"
            android:id="@+id/toolbar">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/leftarrow"
                android:layout_gravity="start"
                android:layout_marginRight="10dp"
                android:id="@+id/back"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="start"
                android:paddingLeft="10dp"
                android:layout_marginRight="0dp"
                android:fontFamily="@font/muli_semibold"
                android:textColor="@color/white"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:layout_marginTop="0dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_dark_background"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/push"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cie3"
                        android:layout_width="20dp"
                        android:layout_centerVertical="true"
                        android:layout_height="20dp"
                        android:src="@drawable/notification"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/cie3"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        android:text="@string/push_notifications"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/activate_push"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cie2"
                        android:layout_width="20dp"
                        android:layout_centerVertical="true"
                        android:layout_height="20dp"
                        android:src="@drawable/feedbacks"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_toEndOf="@+id/cie2"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/white"
                            android:text="@string/feedback"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="#C4C4C4"
                            android:text="@string/write_mail"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/share"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cie4"
                        android:layout_width="18dp"
                        android:layout_centerVertical="true"
                        android:layout_height="18dp"
                        android:src="@drawable/recommend"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/cie4"
                        android:padding="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/white"
                            android:text="@string/recommend"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="#C4C4C4"
                            android:text="@string/share_app"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/storage"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cie5"
                        android:layout_width="20dp"
                        android:layout_centerVertical="true"
                        android:layout_height="20dp"
                        android:src="@drawable/storage"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_toEndOf="@+id/cie5"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/white"
                            android:text="@string/storage_location"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="#C4C4C4"
                            android:text="@string/storage_location_path"
                            android:textSize="12sp" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_semibold"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:text="@string/about"/>

                <RelativeLayout
                    android:id="@+id/rate"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cie7"
                        android:layout_width="20dp"
                        android:layout_centerVertical="true"
                        android:layout_height="20dp"
                        android:src="@drawable/rating"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/cie7"
                        android:padding="8dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/white"
                            android:text="@string/rate_this_app"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textColor="#C4C4C4"
                            android:text="@string/rate_subtxt"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/about"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cie8"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/android"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_toEndOf="@+id/cie8"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:textColor="@color/white"
                            android:text="@string/version"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/app_version"
                            android:textColor="#C4C4C4"
                            android:textSize="12sp" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>
